Fixed troubleshooting section in README.md